# keycast

./: .env.example  .gitignore  API_ENDPOINTS_TODO.md  ARCHITECTURE_MULTIDOMAIN.md  AUTHORIZATION_FLOW_IMPLEMENTATION.md  CHANGELOG.md  Cargo.toml  DATABASE_ARCHITECTURE_RESEARCH.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DESIGN_AUTO_PROVISION.md  DEVELOPMENT.md  Dockerfile  ENHANCED_SIGNER_MIGRATION.md  FRONTEND_MIGRATION_PLAN.md  IMPLEMENTATION_STATUS.md  ISSUES.md  KEYCAST_LOGIN_STATUS.md  MARKDOWN_ASSESSMENT_REPORT.md  MULTI_DOMAIN_RESEARCH.md  MULTI_TENANCY_IMPLEMENTATION_PLAN.md  NEXT_STEPS_SUMMARY.md  OAUTH_SCOPES_TEST_RESULTS.md  PERSONAL_AUTH_ASSESSMENT.md  PERSONAL_AUTH_COMPLETION_PLAN.md  PERSONAL_NOSTR_AUTH_IMPLEMENTATION_PLAN.md  PHASE1_EMERGENCY_FIXES_COMPLETED.md  README.md  RELIABILITY_IMPROVEMENTS_SUMMARY.md  SECURITY.md  SIGNER_RELIABILITY_GUIDE.md  TECHNICAL_DEBT_AND_REMAINING_WORK.md  TECHNICAL_DEBT_ASSESSMENT.md  TENANT_QUERY_AUDIT.md  TESTING.md  TESTING_GUIDE.md  bun.lockb  cloudbuild.yaml  compose.local.yml  docker-compose.dev.yml  (+32 more)
.claude/: settings.local.json
api/: Cargo.toml  openapi.yaml
api/src/: email_service.rs  lib.rs  main.rs  state.rs  technical_docs.rs
api/src/api/: error.rs  tenant.rs  types.rs
api/src/api/http/: applications.rs  auth.rs  mod.rs  nip05.rs  oauth.rs  routes.rs  teams.rs
api/src/api/http/users/: authorization_requests.rs  authorization_requests_test.rs  authorizations.rs  keys.rs  mod.rs  policies.rs  profile.rs
api/tests/: applications_test.rs  auth_test.rs  integration_test.rs  oauth_integration_test.rs  oauth_test.rs  oauth_unit_test.rs  tenant_isolation_test.rs
core/: Cargo.toml
database/: keycast.db.backup-20251023-173218
deployment/: keycast-signer.service  supervisor-signer.conf
docs/: AGENTS.md  PERSISTENT_STORAGE_RESEARCH.md
examples/: NOSTR_LOGIN_IMPLEMENTATION_DONE.md  NOSTR_LOGIN_INTEGRATION.md  README.md  TESTING_SUMMARY.md  TEST_RESULTS.md  keycast-auth-test.html  keycast-test-bundled.html  keycast-test.html  nostr-client-enhanced.html  nostr-client-full.html  nostr-client-oauth-ndk.html  nostr-client-oauth.html  (+8 more)
signer/: Cargo.toml
signer/src/: lib.rs  main.rs  signer_daemon.rs  signer_daemon.rs.old  signer_daemon_enhanced.rs  signer_manager.rs
(+90 files in other folders)
