[package]
name = "keycast_api"
description = "A Nostr key manager and remote signer"
authors = ["Keycast Authors"]
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
async-trait = "0.1"
axum = "0.7"
base64 = { workspace = true }
bcrypt = "0.15"
bip39 = "2.0"
chrono = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }
jsonwebtoken = "9"
keycast_core = { path = "../core" }
nostr = {workspace = true}
nostr-sdk = {workspace = true}
once_cell = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
sha256 = "1.5"
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["trace", "util", "cors", "fs"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
urlencoding = "2.1"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1.5", features = ["full"] }
http-body-util = "0.1"
aes-gcm = "0.10"
async-trait = "0.1"
