[package]
name = "keycast_signer"
description = "A Nostr remote signing daemon for the keycast application"
authors = ["Keycast Authors"]
version = "0.1.0"
edition = "2021"

# The unified signer binary handles all authorizations in a single process
[[bin]]
name = "keycast_signer"
path = "src/main.rs"

[dependencies]
keycast_core = { path = "../core" }
axum = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
ctrlc = "3.4"
dotenv = { workspace = true }
libc = "0.2"
nostr-sdk = {workspace = true}
nostr = {workspace = true}
nostr-connect = {version = "0.37", git="https://github.com/rust-nostr/nostr", rev="5ef7353789d54931b664639c11df1aa22e9aa37c"}
once_cell = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
